--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -25,16 +25,16 @@
                 <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
-                            <div class="tab-content">
-                                <form role="form" (submit)="addProduct($event)" method="post">
+                            <form role="form" (submit)="addProduct($event)" method="post">
+                            <div class="tab-content">                                
                                 <div class="tab-pane active" id="step1">
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                                             <h5 class="create-ad-label">I have for Rent</h5>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                                            <select class="form-control select-custom-field">
-                                                <option *ngFor="let room of roomList" value="{{room.title}}"><a id="{{room.id}}">{{room.title}}</a></option>
+                                            <select [(ngModel)]="product.productCategory" name="productCategory" class="form-control select-custom-field">
+                                                <option *ngFor="let productCategory of productCategoryList" [ngValue]="productCategory">{{productCategory.title}}</option>
                                             </select>
                                         </div>
                                     </div>
@@ -43,8 +43,8 @@
                                             <h5 class="create-ad-label">Size of property</h5>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                                            <select class="form-control select-custom-field">
-                                                <option *ngFor="let productSize of productSizeList" value="{{productSize.title}}"><a id="{{productSize.id}}">{{productSize.title}}</a></option>
+                                            <select [(ngModel)]="product.productSize" name="productSize" class="form-control select-custom-field">
+                                                <option *ngFor="let productSize of productSizeList" [ngValue]="productSize">{{productSize.title}}</option>
                                             </select>
                                         </div>
                                     </div>
@@ -53,14 +53,14 @@
                                             <h5 class="create-ad-label">Type of property</h5>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                                            <select class="form-control select-custom-field">
-                                                <option *ngFor="let productType of productTypeList" value="{{productType.title}}"><a id="{{productType.id}}">{{productType.title}}</a></option>
+                                            <select [(ngModel)]="product.productType" name="productType" class="form-control select-custom-field">
+                                                <option *ngFor="let productType of productTypeList" [ngValue]="productType">{{productType.title}}</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
-                                            <button id="step1" name="step1" class="form-control common-custom-button">Next Step</button>
+                                            <button type="button" id="step1" name="step1" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -70,8 +70,8 @@
                                             <h5 class="create-ad-label">Area</h5>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                                            <select class="form-control select-custom-field">
-                                                <option *ngFor="let area of areaList" value="{{area.searchString}}"><a id="{{area.id}}">{{area.searchString}}</a></option>
+                                            <select [(ngModel)]="product.location" name="location" class="form-control select-custom-field">
+                                                <option *ngFor="let location of locationList" [ngValue]="location">{{location.searchString}}</option>
                                             </select>
                                         </div>
                                     </div>
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
-                                            <button id="step2" name="step2" class="form-control common-custom-button">Next Step</button>
+                                            <button type="button" id="step2" name="step2" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -114,7 +114,7 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
-                                            <button id="step3" name="step3" class="form-control common-custom-button">Next Step</button>
+                                            <button type="button" id="step3" name="step3" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
-                                            <button id="step4" name="step4" class="form-control common-custom-button">Next Step</button>
+                                            <button type="button" id="step4" name="step4" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -193,7 +193,7 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
-                                            <button id="step5" name="step5" class="form-control common-custom-button">Next Step</button>
+                                            <button type="button" id="step5" name="step5" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -292,7 +292,7 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
-                                            <button id="step4" name="step4" class="form-control common-custom-button">Next Step</button>
+                                            <button type="button" id="step6" name="step6" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -315,12 +315,12 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
-                                            <button class="form-control common-custom-button">Place Your Advert</button>
+                                            <button type="submit" class="form-control common-custom-button">Place Your Advert</button>
                                         </div>
                                     </div>
-                                </div>
-                                </form>
+                                </div>                                
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
