--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                            <img class="img-responsive" src="resources/images/{{product.img}}">
+                            <img class="img-responsive" src="resources/images/product/{{product.img}}">
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
                             <div class="my-ads-product-description">{{product.description}}</div>
@@ -48,7 +48,7 @@
                             <div class="my-ads-product-id-title">Reference Id</div>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <div class="my-ads-product-id">{{product.id}}</div>
+                            <div class="my-ads-product-id">{{product.referenceId}}</div>
                         </div>
                     </div>
                     <div class="row form-group">
