--- a/web/html_components/member/message/inbox.html
+++ b/web/html_components/member/message/inbox.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a [routerLink]="['/inbox']" (click)="inbox($event)">Inbox</a></li>
-            <li><a [routerLink]="['/sent']" (click)="sent($event)">Sent</a></li>
-            <li><a [routerLink]="['/saved']" (click)="saved($event)">Saved</a></li>
+            <li><a [routerLink]="['/inbox']">Inbox</a></li>
+            <li><a [routerLink]="['/sent']">Sent</a></li>
+            <!--<li><a [routerLink]="['/saved']">Saved</a></li>-->
         </ul>
     </div>
      <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
@@ -16,16 +16,16 @@
         </div>
         <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="message-inbox-content-layout" *ngFor="let message of messages">
+                <div class="message-inbox-content-layout" *ngFor="let message of messageList">
                      <div class="row">
                         <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
-                            <input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox message-inbox-checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
+                            <!--<input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox message-inbox-checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">-->
                         </div>                           
                         <div class="col-xs-7 col-sm-8 col-md-9 col-lg-9">
-                            <a [routerLink]="['/showmessage']" (click)="selectedMessage($event, 1)">
+                            <a (click)="selectedMessage($event, message.id)">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                        <h3 class="message-inbox-sender-name">{{message.to.firstName}} {{message.to.lastName}}</h3>
+                                        <h3 class="message-inbox-sender-name">{{message?.from?.firstName}} {{message?.from?.lastName}}</h3>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -35,18 +35,18 @@
                                 </div>
                             </a>
                         </div>                        
-                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+<!--                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
                             <div class="message-inbox-mesage-delete-icon"><i class="fa fa-times" aria-hidden="true"></i></div>
-                        </div>                        
+                        </div>                        -->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row form-group">
+<!--        <div class="row form-group">
             <div class="col-xs-6 col-sm-5 col-md-3 col-lg-3">
                 <button class="form-control common-custom-button">Delete Selected</button>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
 
