--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -330,45 +330,47 @@
                             </section>
                             <input name="tabbed" id="tabbed3" type="radio">
                             <section>
-                                <h1>
-                                    <label for="tabbed3">Message</label>
-                                </h1>
-                                <div class="tabbed-content">
-                                    <div class="row form-group">
-                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                            <div class="hr"></div>
+                                
+                                    <h1>
+                                        <label for="tabbed3">Message</label>
+                                    </h1>
+                                    <div class="tabbed-content">
+                                        <div class="row form-group">
+                                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                <div class="hr"></div>
+                                            </div>
+                                        </div>
+                                        <div class="row form-group">
+                                            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                                                <span class="message_from_details-label">To: </span>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
+                                                <span class="message_from_details_text"> Nazmul Hasan</span>
+                                            </div>
+                                        </div>
+                                        <div class="row form-group">
+                                            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                                                <span class="message_from_details-label">Subject:</span>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
+                                                <span class="message_from_details_text">Re : {{productInfo.title}}</span>
+                                            </div>
+                                        </div>
+                                        <div class="row form-group">
+                                            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                                                <span class="message_from_details-label">Message</span>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
+                                                <textarea name="new_message" id="new_message" [(ngModel)]="newMessageBody" class="form-control" rows="5"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="row form-group">
+                                            <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-9 col-md-3 col-lg-offset-9 col-lg-3">
+                                                <button type="button" id="submit_message_text" name="submit_message_text" (click)="addmessage($event)" class="form-control common-custom-button">Send</button>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="row form-group">
-                                        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                                            <span class="message_from_details-label">To: </span>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-                                            <span class="message_from_details_text"> Nazmul Hasan</span>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                                            <span class="message_from_details-label">Subject:</span>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-                                            <span class="message_from_details_text">  Room To Let</span>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                                            <span class="message_from_details-label">Message</span>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-                                            <textarea class="form-control" rows="5"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-9 col-md-3 col-lg-offset-9 col-lg-3">
-                                            <button id="send-msg" name="send-msg" class="form-control common-custom-button">Send</button>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                             </section>
                         </div>
                     </div>
