--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -22,12 +22,13 @@
                                 <!--3 hours 25 mins 20 secs-->
                                 {{productInfo.timeLeft}}
                             </h5>
-<!--                            <h5 class="product-info-details-left-panel-current-price-header">
+                            <h5 class="product-info-details-left-panel-current-price-header">
                                 Current Bid:
                             </h5>
                             <h3 class="product-info-details-left-panel-current-price">
-                                {{product?.basePrice?.currencyUnit?.title}} {{product?.basePrice?.amount}}
-                            </h3>-->
+                                $124,000
+                                <!--{{product?.basePrice?.currencyUnit?.title}} {{product?.basePrice?.amount}}-->
+                            </h3>
                         </div>
                     </div>
                 </div>
@@ -73,12 +74,27 @@
             <div class="product-info-details-left-panel">
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <!--<h3 class="product-info-details-left-panel-middle-heading">This property is marketed by:</h3>-->
+                        <h3 class="product-info-details-left-panel-middle-heading">This property is marketed by:</h3>
                     </div>
                 </div>
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <h3 class="product-info-details-left-panel-location">{{product?.location?.searchString}} {{product?.location?.postCode}}</h3>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <button class="product-info-details-request-button">Request More Details</button> or
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <h3 class="product-info-details-contact-number">Call: 01653 511024</h3>
+                    </div>
+                </div>
+                 <div class="row form-group">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <h3 class="product-info-details-left-panel-save-property" ><i class="save-property-heart-icon fa fa-heart-o" aria-hidden="true"></i><a class="product-info-details-left-panel-save-property">Save Property</a></h3>
                     </div>
                 </div>
             </div>
